test/types/tuple/diten/zerotuple.good
zerotuple.chpl:1: error: tuple must have positive size
