test/types/tuple/diten/zerotuple.chpl
var x: 0*int;
writeln(x);
